--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
     </nav>
     <div class="intro">
-      <h1>Designing elegant apps & solving problems</h1>
+      <h1>SHREYASH GOVINDWAR</h1>
       <p>Frontend • Backend • DevOps</p>
       <a class="cta" href="#work">See my work</a>
     </div>
@@ -27,26 +27,26 @@
     <section id="work" class="cards">
       <article class="card">
         <h3>Project One</h3>
-        <p>Short description of project one. Tech: React, Node.</p>
+        <p>FitMate.AI</p>
       </article>
       <article class="card">
         <h3>Project Two</h3>
-        <p>Short description of project two. Tech: Flask, Docker.</p>
+        <p>Contextify</p>
       </article>
     </section>
 
     <section id="about" class="panel">
       <h2>About me</h2>
-      <p>Third-year CS student passionate about building practical, elegant software.</p>
+      <p>Final-year CS student passionate about building practical, elegant software.</p>
     </section>
 
     <section id="contact" class="panel">
       <h2>Contact</h2>
-      <p>Email: you@example.com</p>
+      <p>Email: shreyashgovindwar09@gmail.com</p>
     </section>
   </main>
 
-  <footer class="footer">© <span id="year"></span> YourName</footer>
+  <footer class="footer">© <span id="year"></span> Shreyash Govindwar</footer>
   <script>document.getElementById('year').innerText = new Date().getFullYear();</script>
 </body>
 </html>
