add projects in portfolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <nav class="nav">
-      <div class="logo">YourName</div>
+      <div class="logo">Shreyash Govindwar</div>
       <ul>
         <li><a href="#work">Work</a></li>
         <li><a href="#about">About</a></li>
@@ -24,16 +24,41 @@
   </header>
 
   <main class="container">
-    <section id="work" class="cards">
-      <article class="card">
-        <h3>Project One</h3>
-        <p>FitMate.AI</p>
-      </article>
-      <article class="card">
-        <h3>Project Two</h3>
-        <p>Contextify</p>
-      </article>
-    </section>
+  <section id="work" class="cards">
+    <article class="card">
+      <h3>Project One</h3>
+      <p>Short description of project one. Tech: React, Node.</p>
+    </article>
+
+    <article class="card">
+      <h3>Project Two</h3>
+      <p>Short description of project two. Tech: Flask, Docker.</p>
+    </article>
+
+    <!-- New Projects -->
+    <article class="card">
+      <h3>FitMate.AI</h3>
+      <p>
+        An AI-powered fitness web app built using the MERN stack and Gemini API.
+        It generates personalized workout and nutrition plans, tracks progress,
+        and integrates Firebase Authentication for secure login.
+      </p>
+      <p><strong>Tech:</strong> MongoDB, Express, React, Node.js, Firebase, Gemini API</p>
+      <a href="https://fitmateai.vercel.app/" target="_blank">View Project</a>
+    </article>
+
+    <article class="card">
+      <h3>Contextify</h3>
+      <p>
+        A Chrome extension that provides instant context for highlighted text by
+        fetching top articles, videos, and summaries from the web. Designed for
+        students and researchers to understand topics faster.
+      </p>
+      <p><strong>Tech:</strong> JavaScript, Chrome API, Manifest V3, HTML, CSS</p>
+      <a href="#" target="_blank">View Project</a>
+    </article>
+  </section>
+</main>
 
     <section id="about" class="panel">
       <h2>About me</h2>
