--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     <article class="card">
       <h3>Contextify</h3>
       <p>
-        A Chrome extension that provides instant context for highlighted text by
-        fetching top articles, videos, and summaries from the web. Designed for
-        students and researchers to understand topics faster.
+        A RAG Application that leverages LLMs to provide context-aware responses by retrieving
+        relevant documents from a vector database. Built with Python, FastAPI, and LangChain.
       </p>
       <p><strong>Tech:</strong> JavaScript, Chrome API, Manifest V3, HTML, CSS</p>
       <a href="#" target="_blank">View Project</a>
