--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="about" class="panel">
       <h2>About me</h2>
-      <p>Final-year CS student passionate about building practical, elegant software.</p>
+      <p>Final-year CS student passionate about building practical, elegant software solutions.</p>
     </section>
 
     <section id="contact" class="panel">
