--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="about" class="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="profile.jpg" alt="Profile Picture" class="profile-pic" />
+      <img src="profile.png" alt="Profile Picture" class="profile-pic" />
       <div class="about-text">
         <p>
           I'm a Computer Science student passionate about building interactive and 
