--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="intro">
       <h1>SHREYASH GOVINDWAR</h1>
-      <p>Frontend • Backend • DevOps</p>
+      <p>Frontend • Backend • DevOpss</p>
       <a class="cta" href="#work">See my work</a>
     </div>
   </header>
